Plugin V1.3 geschrieben -> Funktionstüchtig